Changelog:

Version 0.99.9.4
 - Fix Infiltration base prevention, if Battleship Attack successful
 - Fix Alloy Drone Taser Sprite Background
 - Fix Alloy Drone Scout Weapon Range
 - Fix Hovertank Smokeweapon Clipsize
 - Fix SellPrice for Alloy Cannon Craftweapon
 - Fix BuyPrice Drone Scout
 - Fix Infiltration UFO's attempting to land on water point sites
 - Adjust UFO air/landed score
 - Adjust Enhanced Power Armor Bonuses
 - Add Taser Pistol Elerium Clip Animations
 - Add support Hoverdrones for X-Com

Version 0.99.9.3
 - Research tree Overwork so everything fits better
 - Fix Bug for Mod not loading on OXCE 7.7.x+
 - Fix Plasma Blade not being available in lategame to player
 - Fix Mars Terrain Height (4 -> 8)
 - Fix globe texture asignment, which prevented Terrorsites from spawning properly
 - Fix missing Adv. Medikit Dependency
 - Fix PLasma Pistol/Rifle Clip sell prices
 - Fix Walkertank/Laser upgrade pricing
 - Rebalance lategame enemy PSI DEF
 - Rebalance X-Com early armors and damage modifiers
 - Rebalance Damage Modifiers for Tanks/Alloy Drones
 - Rebalance Psi Amps to use Stamina additionally to Time Units for Psi Panic and Mind Control
 - Adjust Raceweights for more Snakemen
 - Adjust Terror Occurance and Scoring
 - Adjust Spitter Zombies to be more dangerous
 - Adjust Avenger Soldier spawn to match THUNDER
 - Adjust Meleeweapons, more attacks possible
 - Adjust Alien Alloy Ammo for konventional Pistols, Rifles and Shotguns
 - Adjust Alloy Drones Research being available after Data Slate
 - Adjust Taser Pistol Clip sizes
 - Add Alien Proxy Grenade (Alien Grenade conversion for X-Com)
 - Add more randomness to Alien Mission starts
 - Add Alien Base execute Missions (Terror, Harvest, Abduction, Base), No Scouts
 - Add more Upgrade Options to X-Com Tanks
 - Add Upgrade Option for Medikts
 - Add Smoke Launcher to all Tanks (free ammo)
 - Add Walkertank/Laser (Sectopod converted)
 - Add Split Alloy Drone/Medikit -> Alloy Drone/Adv. Medikit