@@ -567,12 +567,18 @@ en-US:
 
   STR_PLASMA_PISTOL_ELERIUM_CLIP: "Plasma Pistol Elerium Clip"
   STR_PLASMA_PISTOL_ELERIUM_CLIP_UFOPEDIA: "A enhanced version of the power source for the small alien Plasma Pistol. It contains a unknown and not reproduceable  special spatial configuration of Elerium the source of all alien power."
+  STR_PLASMA_PISTOL_MANU_UNLOCK1: "Any Plasma Pistol Clip"
+  STR_PLASMA_PISTOL_MANU_UNLOCK2: "Any Plasma Pistol Clip"
 
   STR_PLASMA_RIFLE_ELERIUM_CLIP: "Plasma Rifle Elerium Clip"
   STR_PLASMA_RIFLE_ELERIUM_CLIP_UFOPEDIA: "These are one of two types of ammunition the Plasma Rifle can accept. Enhanced firepower to discharge a burst of anti-matter that destroys anything it touches. It contains a large quantity of Elerium."
+  STR_PLASMA_RIFLE_MANU_UNLOCK1: "Any Plasma Rifle Clip"
+  STR_PLASMA_RIFLE_MANU_UNLOCK2: "Any Plasma Rifle Clip"
 
   STR_HEAVY_PLASMA_ELERIUM_CLIP: "Heavy Plasma Elerium Clip"
   STR_HEAVY_PLASMA_ELERIUM_CLIP_UFOPEDIA: "This enhanced ammunition for the Heavy Plasma is based directly on Elerium, it has enourmus destructive Power and it contains a very large quantity of Elerium."
+  STR_HEAVY_PLASMA_MANU_UNLOCK1: "Any Heavy Plasma Clip"
+  STR_HEAVY_PLASMA_MANU_UNLOCK2: "Any Heavy Plasma Clip"
 
   STR_PLASMA_SHOTGUN: "Plasma Shotgun"
   STR_PLASMA_SHOTGUN_CLIP: "Plasma Shotgun Shells"
@@ -580,6 +586,8 @@ en-US:
   STR_PLASMA_SHOTGUN_UFOPEDIA: "We were confused by this weapon at first but testing in the lab revealed that the rather diffuse beam it emits is extremely devastating up close but relatively ineffective at long range."
   STR_PLASMA_SHOTGUN_CLIP_UFOPEDIA: "These are one of two types of ammunition the Plasma Shotgun can accept.  When in use they cause it to emit a powerful pulse of plasma energy. It contains a small quantity of Elerium."
   STR_PLASMA_SHOTGUN_ELERIUM_CLIP_UFOPEDIA: "These are one of two types of ammunition the Plasma Shotgun can accept. When in use they cause it to discharge a burst of anti-matter that destroys anything it touches. It contains a large quantity of Elerium."
+  STR_PLASMA_SHOTGUN_MANU_UNLOCK1: "Any Plasma Shotgun Clip"
+  STR_PLASMA_SHOTGUN_MANU_UNLOCK2: "Any Plasma Shotgun Clip"
 
   STR_PLASMA_SNIPER_RIFLE: "Plasma Sniper Rifle"
   STR_PLASMA_SNIPER_RIFLE_CLIP: "Plasma Sniper Rifle Clip"
@@ -587,6 +595,8 @@ en-US:
   STR_PLASMA_SNIPER_RIFLE_UFOPEDIA: "This is an extremely precise and powerful weapon based on accelerating particles from within a minute anti-gravity field."
   STR_PLASMA_SNIPER_RIFLE_CLIP_UFOPEDIA: "This small object is used as a power source for a Plasma Sniper Rifle - a precision alien weapon.  Contains a small quantity of Elerium."
   STR_PLASMA_SNIPER_RIFLE_ELERIUM_CLIP_UFOPEDIA: "This ammunition for the Plasma Sniper Rifle is based directly on Elerium, it has enourmous destructive Power and it contains a large quantity of Elerium."
+  STR_PLASMA_SNIPER_RIFLE_MANU_UNLOCK1: "Any Plasma Sniper Rifle Clip"
+  STR_PLASMA_SNIPER_RIFLE_MANU_UNLOCK2: "Any Plasma Sniper Rifle Clip"
 
   STR_SMALL_LAUNCHER_UFOPEDIA: "Compact but powerful alien launcher, useful in a variety of combat scenarios. A versatile and deadly weapon."
   STR_ELERIUM_BOMB: "Elerium Bomb"
