@@ -8,6 +8,7 @@ Version 0.99.9.4
  - Fix SellPrice for Alloy Cannon Craftweapon
  - Fix BuyPrice Drone Scout
  - Fix Infiltration UFO's attempting to land on water point sites
+ - Fix Plasma Weapons needing both clips being researched for manufacture
  - Adjust UFO air/landed score
  - Adjust Enhanced Power Armor Bonuses
  - Add Taser Pistol Elerium Clip Animations
